--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -120,7 +120,9 @@ a {
   border-top: 1px solid #edf0f5 !important; }
 
 .site-footer {
-  padding: 4em 0; }
+  padding: 4em 0;
+  background-image: url('footer_background.jpg');
+ }
   .site-footer ul li {
     margin-bottom: 10px; }
     .site-footer ul li a {
@@ -590,7 +592,7 @@ a {
     left: 0;
     font-size: 20px;
     line-height: 1;
-    color: #7971ea; }
+    color: #d49701 }
   .block-5 ul li.address:before {
     content: "\e8b4"; }
   .block-5 ul li.email:before {
